--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,12 @@ requires-python = ">=3.10"
 dependencies = [
     "accelerate>=1.10.1",
     "google-genai>=1.32.0",
+    "ipykernel>=6.30.1",
     "numpy>=2.2.6",
     "pandas>=2.3.2",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
+    "scikit-learn>=1.7.1",
     "torch>=2.8.0",
     "torchvision>=0.23.0",
     "transformers>=4.56.0",
