--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "accelerate>=1.10.1",
     "google-genai>=1.32.0",
     "ipykernel>=6.30.1",
+    "matplotlib>=3.10.6",
     "numpy>=2.2.6",
     "pandas>=2.3.2",
     "pydantic>=2.11.7",
@@ -16,4 +17,5 @@ dependencies = [
     "torch>=2.8.0",
     "torchvision>=0.23.0",
     "transformers>=4.56.0",
+    "webcolors>=24.11.1",
 ]
