--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
     "scikit-learn>=1.7.1",
+    "seaborn>=0.13.2",
     "torch>=2.8.0",
     "torchvision>=0.23.0",
     "transformers>=4.56.0",
